--- a/Barberia Alura.html
+++ b/Barberia Alura.html
@@ -19,7 +19,7 @@
                 <nav>
                     <ul>
                         <li><a href="Barberia Alura.html">Home</a></li>
-                        <li><a href="productos.html">Productos</a></li>
+                        <li><a href="productos.html">Servicios</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
