--- a/productos.html
+++ b/productos.html
@@ -14,7 +14,7 @@
                 <nav><!-- NAV etiqueta de panel de navegacion -->
                     <ul>
                         <li><a href="Barberia Alura.html">Home</a></li><!--la union de links-->
-                        <li><a href="productos.html">Productos</a></li>
+                        <li><a href="productos.html">Servicios</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
