--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
             </div>
         </header>
         <main>
-            <h3>Diligencia este formulario para que nos podamos contactar contigo</h3>
+            <h3>Diligencia este formulario para  contactarnos contigo</h3>
             <form><!--Representa a la etiqueta de un formulario-->
                 <label for="nombreapellido">Nombre y Apellido</label> <!--es una etiqueta para la entrada de datos para el <input>-->
                 <input type="text" id="nombreapellido" class="input-padron" required> <!-- con el for y id se juntan para referenciarse uno del otro y el requerid es para que el espacio se obligatorio-->
