--- a/Barberia Alura.html
+++ b/Barberia Alura.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UFT-8">
         <meta name="viewport" content="width=device-width">  
-        <title>Barbería Alura</title>
+        <title>Barbería YIM</title>
         <link rel="shortcut icon" href="./imagenes/barberia.png" type="image/x-icon">
         <link rel="stylesheet" href="reset.css/reset.css">
         <link rel="stylesheet" href="productos.css">
