--- a/Barberia Alura.html
+++ b/Barberia Alura.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UFT-8">
         <meta name="viewport" content="width=device-width">  
-        <title>.Barbería Alura</title>
+        <title>.fgBarbería0 Alura</title>
         <link rel="shortcut icon" href="./imagenes/barberia.png" type="image/x-icon">
         <link rel="stylesheet" href="reset.css/reset.css">
         <link rel="stylesheet" href="productos.css">
@@ -19,7 +19,7 @@
                 <nav>
                     <ul>
                         <li><a href="Barberia Alura.html">Home</a></li>
-                        <li><a href="productos.html">Prodkuctos</a></li>
+                        <li><a href="productos.html">P0rodkuctos</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
