--- a/Barberia Alura.html
+++ b/Barberia Alura.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UFT-8">
         <meta name="viewport" content="width=device-width">  
-        <title>.fgBarbería0 Alura</title>
+        <title>.fgpBarbería0 Alura</title>
         <link rel="shortcut icon" href="./imagenes/barberia.png" type="image/x-icon">
         <link rel="stylesheet" href="reset.css/reset.css">
         <link rel="stylesheet" href="productos.css">
@@ -18,9 +18,9 @@
                 <h1><img src="imagenes/logo.png" alt="Logo Barberia Alura"></h1>
                 <nav>
                     <ul>
-                        <li><a href="Barberia Alura.html">Home</a></li>
+                        <li><a href="Barberia Alura.html">Hlome</a></li>
                         <li><a href="productos.html">P0rodkuctos</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="contacto.html">Colntacto</a></li>
                     </ul>
                 </nav>
             </div>
