--- a/Barberia Alura.html
+++ b/Barberia Alura.html
@@ -31,7 +31,7 @@
         <main>
             <section class="principal"> <!-- Para un bloque donde el contenido tiene el mismo significado, el mismo sentido, usamos una <section> -->
 
-                <h2 class="titulo-principal">la Barbería Alura</h2> 
+                  <h2 class="titulo-principal">la Alura</h2> 
 
                 <img class="utensilios" src="./imagenes/utensilios.jpg" alt="utensilios de un barbero" >
     
