--- a/productos.html
+++ b/productos.html
@@ -16,6 +16,7 @@
                         <li><a href="Barberia Alura.html">Home</a></li><!--la union de links-->
                         <li><a href="productos.html">Productos</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="blog.html">blog</a></li>
                     </ul>
                 </nav>
             </div>
