--- a/Barberia Alura.html
+++ b/Barberia Alura.html
@@ -18,7 +18,7 @@
                 <h1><img src="imagenes/logo.png" alt="Logo Barberia Alura"></h1>
                 <nav>
                     <ul>
-                        <li><a href="Barberia Alura.html">Hlome</a></li>
+                        <li><a href="Barberia Alura.html">HOME</a></li>
                         <li><a href="productos.html">P0rodkuctos</a></li>
                         <li><a href="contacto.html">Colntacto</a></li>
                     </ul>
