--- a/Barberia Alura.html
+++ b/Barberia Alura.html
@@ -17,7 +17,7 @@
             <div class="caja">
                 <h1><img src="imagenes/logo.png" alt="Logo Barberia Alura"></h1>
                 <nav>
-                    <ul>
+                    <ul style="font-family: cursive;">
                         <li><a href="Barberia Alura.html">HOME</a></li>
                         <li><a href="productos.html">P0rodkuctos</a></li>
                         <li><a href="contacto.html">Colntacto</a></li>
