--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
             </div>
         </header>
         <main>
-            <h1>Diligencia este formulario para contactarnos contigo</h1>
+            <h1 class="titulofor">Diligencia este formulario para contactarnos contigo</h1>
             <form class="formulario"><!--Representa a la etiqueta de un formulario-->
                 <label for="nombreapellido">Nombre y Apellido</label> <!--es una etiqueta para la entrada de datos para el <input>-->
                 <input class="Respuesta" type="text" id="nombreapellido" class="input-padron" required> <!-- con el for y id se juntan para referenciarse uno del otro y el requerid es para que el espacio se obligatorio-->
