modificaacion de la linea 71-75-76-77-80

--- a/Barberia Alura.html
+++ b/Barberia Alura.html
@@ -68,16 +68,16 @@
     
             <section class="diferenciales"> 
     
-                <h3 class="titulo-principal">Diferenciales</h3>
+                <h3 class="titulo-principal">Nos destacamos por:</h3>
 
                 <div class="contenido-diferenciales">
                     <ul class="lista-diferenciales">
-                        <li class="items">Atencion personalizada a los clientes</li>
-                        <li class="items">Espacio diferenciado</li>
-                        <li class="items">Localizacion</li> 
+                        <li class="items">Una atencion personalizada para nuestros clientes</li>
+                        <li class="items">Espacios optimos</li>
+                        <li class="items">Una localizacion accesible</li> 
                         <li class="items">Profesionales calificados</li> 
                         <li class="items">Puntualidad</li>
-                        <li class="items">Limpieza</li>
+                        <li class="items">Nuestros materiales de trabajo cuentan con su respectiva limpieza</li>
                     </ul><img src="diferenciales/diferenciales.jpg" class="imagen-diferenciales">    
                 </div>
                 <div class="video">
