cambio en blog, new style

--- a/blog.html
+++ b/blog.html
@@ -1,23 +1,24 @@
 <head>
     <meta charset="UFT-8">
-    <meta name="viewport" content="width=device-width">  
+    <meta name="viewport" content="width=device-width">
     <title>Barbería Alura</title>
     <link rel="shortcut icon" href="./imagenes/barberia.png" type="image/x-icon">
     <link rel="stylesheet" href="reset.css/reset.css">
     <link rel="stylesheet" href="productos.css">
+    <link rel="stylesheet" href="style3.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 
 
 <body>
-    <header> <!-- la semantica de cada pagina web es HEADER MAIN FOOTER--> 
+    <header> <!-- la semantica de cada pagina web es HEADER MAIN FOOTER-->
         <div class="caja">
             <h1><img src="imagenes/logo.png" alt="Logo Barberia Alura"></h1>
             <nav>
                 <ul>
                     <li><a href="Barberia Alura.html">Home</a></li>
                     <li><a href="productos.html">Productos</a></li>
-                    <li><a href="contacto.html">Contacto</a></li> 
+                    <li><a href="contacto.html">Contacto</a></li>
                     <li><a href="blog.html">blog</a></li>
                 </ul>
             </nav>
@@ -26,13 +27,78 @@
 
 
 
+    <main>
 
-    <section class="principal"> <!-- Para un bloque donde el contenido tiene el mismo significado, el mismo sentido, usamos una <section> -->
 
-        <h2 class="titulo-principal">la Barbería Alura</h2> 
 
-        <img class="corte" src="./imagenes/pr2.jpg" alt="utensilios de un barbero" >
+        <section class="knowledge">
+            <div class="knowledge__container container">
+                <div class="knowledege__texts">
+                    <h2 class="subtitle">19/octubre/2023</h2>
 
-       
-        
-    </section> 
+                    <p class="knowledge__paragraph">
+                        hola, he estado desconectado ultimamnte pero es por que le he dedicado mucho tiempo a esta
+                        hermosa cadena, ya saben que si les guata hay muchas similares en el Catalogo
+                    </p>
+
+                    <a href="5 Catalogo.html" class="cta">Catalogo</a>
+                </div>
+
+                <figure class="knowledge__picture">
+                    <img style="width: 250px;" src="./images/cadena.jfif" class="knowledge__img">
+                </figure>
+            </div>
+        </section>
+
+
+
+        <section class="knowledge">
+            <div class="knowledge__container container">
+                <div class="knowledege__texts">
+                    <h2 class="subtitle">6/octubre/2023</h2>
+
+                    <p class="knowledge__paragraph">
+                        Tengan en claro que el garmo aumento su valor en un 3% favorecido por la bajada del dólar y el
+                        repunte de las tasas de inflación implícitas.
+                    </p>
+
+                    <a href="5 Catalogo.html" class="cta">Catalogo</a>
+                </div>
+
+                <figure class="knowledge__picture">
+                    <img style="width: 250px;" src="./images/gramo.jfif" class="knowledge__img">
+                </figure>
+            </div>
+        </section>
+
+
+
+
+        <section class="knowledge">
+            <div class="knowledge__container container">
+                <div class="knowledege__texts">
+                    <h2 class="subtitle">1/octubre/2023</h2>
+                    <p class="knowledge__paragraph">
+                        Hoy esabamos en el taller y al hscer esta joya rompi mi camiza por que se quedo atrancada en el
+                        laminador jaja, deecho no fue nada greva. Para ver la joya mira nuestro Catalogo
+                    </p>
+
+                    <a href="5 Catalogo.html" class="cta">Catalogo</a>
+
+                </div>
+
+                <figure class="knowledge__picture">
+                    <img style="width: 250px;" src="./images/camiza.jfif" class="knowledge__img">
+                </figure>
+            </div>
+        </section>
+
+
+
+
+        </section>
+    </main>
+
+
+
+</body>
