--- a/Barberia Alura.html
+++ b/Barberia Alura.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width">
-    <title>.fgpBarbería0 Alura</title>
+    <title>Barbería Alura</title>
     <link rel="shortcut icon" href="./imagenes/barberia.png" type="image/x-icon">
     <link rel="stylesheet" href="reset.css/reset.css">
     <link rel="stylesheet" href="productos.css">
@@ -17,26 +17,12 @@
             <div class="caja">
                 <h1><img src="imagenes/logo.png" alt="Logo Barberia Alura"></h1>
                 <nav>
-<<<<<<< HEAD
                     <ul style="font-family: cursive;">
-=======
                     <ul>
-<<<<<<< HEAD
-
-=======
->>>>>>> 27cfbc03505ada0cce3469673f98909a44eb26d6
                         <li><a href="Barberia Alura.html">Home</a></li>
                         <li><a href="productos.html">Productos</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                         <li><a href="blog.html">blog</a></li>
-<<<<<<< HEAD
-
-                        <li><a href="Barberia Alura.html">HOME</a></li>
-                        <li><a href="productos.html">P0rodkuctos</a></li>
-                        <li><a href="contacto.html">Colntacto</a></li>
-
-=======
->>>>>>> 27cfbc03505ada0cce3469673f98909a44eb26d6
                     </ul>
             </nav>
         </div>
