Update productos.html icon

--- a/productos.html
+++ b/productos.html
@@ -4,6 +4,7 @@
     <head><!--dentro del head van todas las etiquetas informativas-->
         <meta charset="utf-8">
         <title>Productos - Barberia Alura</title>
+        <link rel="shortcut icon" href="./imagenes/barberia.png" type="image/x-icon">
         <link rel="stylesheet" href="reset.css/reset.css"><!--con reset se resetea el visual-->
         <link rel="stylesheet" href="productos.css">
     </head>
